--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
 version: '2'
 services:
   api:
-    build: .
+    build:
+      dockerfile: ./api.Dockerfile
     container_name: api
-    command: bash -c "cd /src/rest && python manage.py runserver 0.0.0.0:8000"
+    #command: tail -F anything
+    command: bash -c "cd /src && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     links:
       - mongo
     volumes:
       - ${ADBREW_CODEBASE_PATH}/tmp:/tmp
-      - ${ADBREW_CODEBASE_PATH}:/src
+      - ${ADBREW_CODEBASE_PATH}/rest:/src
     depends_on:
       - mongo
 
   app:
-    build: .
+    build:
+      dockerfile: ./app.Dockerfile
     container_name: app
-    command: bash -c "cd /src/app && yarn install && yarn start"
+    #command: tail -F anything
+    command: bash -c "cd /src && yarn install && yarn start"
     ports:
       - "3000:3000"
     volumes:
-      - ${ADBREW_CODEBASE_PATH}:/src
+      - ${ADBREW_CODEBASE_PATH}/app:/src
 
   mongo:
-    build: .
+    build:
+      dockerfile: ./mongo.Dockerfile
     container_name: mongo
     restart: always
     ports:
