--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,6 +14,7 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
+coreapi==2.3.3
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
